--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: nauty
-Section: unknown
+Section: non-free/math
 Priority: extra
 Maintainer: David Bremner <bremner@unb.ca>
 Build-Depends: debhelper (>= 5), autotools-dev
@@ -8,5 +8,24 @@ Standards-Version: 3.7.2
 Package: nauty
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: tool to compute graph automorphisms and canonical labellings
+ nauty (no automorphisms, yes?) is a set of procedures for determining
+ the automor- phism group of a vertex-coloured graph. It provides this
+ information in the form of a set of generators, the size of the
+ group, and the orbits of the group. It is also able to produce a
+ canonically-labelled isomorph of the graph, to assist in isomorphism
+ testing.  This package provides the main command line tool dreadnaut,
+ and some utilities ('gtools').  A C API is also available.
+
+Package: libnauty-dev
+Architecture: any 
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: tool to compute graph automorphisms and canonical labellings
+ nauty (no automorphisms, yes?) is a set of procedures for determining
+ the automorphism group of a vertex-coloured graph. It provides this
+ information in the form of a set of generators, the size of the
+ group, and the orbits of the group. It is also able to produce a
+ canonically-labelled isomorph of the graph, to assist in isomorphism
+ testing.  This package provides a C API.
+
+
