--- a/debian/rules
+++ b/debian/rules
@@ -56,7 +56,7 @@ install: build
 
 	# Add here commands to install the package into debian/nauty.
 #	$(MAKE) prefix=$(CURDIR)/debian/nauty/usr install
-	dh_install $(BINFILES) /usr/bin
+	dh_install
 
 # Build architecture-independent files here.
 binary-indep: build install
