--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.8.1
 Package: nauty
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: tool to compute graph automorphisms and canonical labellings
+Description: command line tool to compute graph automorphisms and canonical labellings 
  nauty (no automorphisms, yes?) is a set of procedures for determining
  the automor- phism group of a vertex-coloured graph. It provides this
  information in the form of a set of generators, the size of the
@@ -17,11 +17,24 @@ Description: tool to compute graph automorphisms and canonical labellings
  testing.  This package provides the main command line tool dreadnaut,
  and some utilities ('gtools').  A C API is also available.
 
+
+Package: libnauty0d
+Architecture: any 
+Section: non-free/libs
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: command line tool to compute graph automorphisms and canonical labellings
+ nauty (no automorphisms, yes?) is a set of procedures for determining
+ the automorphism group of a vertex-coloured graph. It provides this
+ information in the form of a set of generators, the size of the
+ group, and the orbits of the group. It is also able to produce a
+ canonically-labelled isomorph of the graph, to assist in isomorphism
+ testing.  
+
 Package: libnauty-dev
 Architecture: any 
 Section: non-free/libdevel
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: tool to compute graph automorphisms and canonical labellings
+Description: development files for computing graph automorphisms
  nauty (no automorphisms, yes?) is a set of procedures for determining
  the automorphism group of a vertex-coloured graph. It provides this
  information in the form of a set of generators, the size of the
