--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: nauty
 Section: non-free/math
 Priority: extra
 Maintainer: David Bremner <bremner@unb.ca>
-Build-Depends: debhelper (>= 7.0.50), autotools-dev
+Build-Depends: debhelper (>= 7.0.50), autotools-dev, quilt (>=0.46-7)
 Standards-Version: 3.8.1
 
 Package: nauty
