--- a/debian/rules
+++ b/debian/rules
@@ -12,11 +12,13 @@ include /usr/share/quilt/quilt.make
 	dh_quilt_patch
 
 override_dh_auto_build:
-	$(MAKE)
+	$(MAKE) BUILDSHLIBS=libnauty.so SONAME=libnauty.so.0d
 
 override_dh_auto_clean:
 	dh_quilt_unpatch
 	$(MAKE) -f makefile.basic clean
+	#this is a bit crude, but dh_install and dh_link are both being too clever.
+	mkdir -p debian/libnauty-dev/usr/lib && ln -sf $(SONAME) debian/libnauty-dev/usr/lib/libnauty.so
 
 override_dh_auto_install: 
 	#this is a bit crude, but dh_install and dh_link are both being too clever.
