--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,7 @@ XS-Autobuild: yes
 Package: nauty
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: command line tool to compute graph automorphisms and
- canonical labellings
+Description: command line tools to compute graph automorphisms
  nauty (no automorphisms, yes?) is a set of procedures for determining
  the automor- phism group of a vertex-coloured graph. It provides this
  information in the form of a set of generators, the size of the
@@ -23,8 +22,7 @@ Package: libnauty0d
 Architecture: any 
 Section: non-free/libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: command line tool to compute graph automorphisms and
- canonical labellings
+Description: library to compute graph automorphisms and canonical labellings
  nauty (no automorphisms, yes?) is a set of procedures for determining
  the automorphism group of a vertex-coloured graph. It provides this
  information in the form of a set of generators, the size of the
@@ -36,7 +34,7 @@ Package: libnauty-dev
 Architecture: any 
 Section: non-free/libdevel
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: development files for computing graph automorphisms
+Description: library for computing graph automorphisms (development files)
  nauty (no automorphisms, yes?) is a set of procedures for determining
  the automorphism group of a vertex-coloured graph. It provides this
  information in the form of a set of generators, the size of the
