--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: nauty
 Section: non-free/math
 Priority: extra
-Maintainer: David Bremner <bremner@unb.ca>
+Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.debian.org>
+Uploaders: David Bremner <bremner@unb.ca>
 Build-Depends: debhelper (>= 7.0.50), autotools-dev, quilt (>=0.46-7)
 Standards-Version: 3.8.2
 Homepage: http://cs.anu.edu.au/~bdm/nauty/
