--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,8 @@
 #export DH_VERBOSE=1
 
 include /usr/share/quilt/quilt.make
--include /usr/share/topgit/tg2quilt.mk
+# use wildcard to avoid warning from dh
+include $(wildcard /usr/share/topgit/tg2quilt.mk)
 
 %:
 	dh --with quilt $@
