--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,7 @@ Description: library to compute graph automorphisms and canonical labellings
 Package: libnauty-dev
 Architecture: any 
 Section: non-free/libdevel
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, libnauty0d
 Description: library for computing graph automorphisms (development files)
  nauty (no automorphisms, yes?) is a set of procedures for determining
  the automorphism group of a vertex-coloured graph. It provides this
