--- a/debian/rules
+++ b/debian/rules
@@ -14,14 +14,13 @@ SONAME=libnauty.so.1d
 	dh --with quilt $@
 
 override_dh_auto_build:
-	$(MAKE) BUILDSHLIBS=libnauty.so SONAME=$(SONAME)
+	$(MAKE) BUILDSHLIBS=$(SONAME) SONAME=$(SONAME)
 
 override_dh_auto_clean:
 	$(MAKE) -f makefile.basic clean
 
-override_dh_auto_install: 
-	#this is a bit crude, but dh_install and dh_link are both being too clever.
-	mkdir -p debian/libnauty-dev/usr/lib && ln -sf $(SONAME) debian/libnauty-dev/usr/lib/libnauty.so
+override_dh_auto_install:
+	$(MAKE) SONAME=$(SONAME) DESTDIR=$(CURDIR)/debian/tmp install install-dev install-shlibs
 
 override_dh_auto_test:
 ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
