--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: non-free/math
 Priority: extra
 Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.debian.org>
 Uploaders: David Bremner <bremner@unb.ca>
-Build-Depends: debhelper (>= 7.0.50), autotools-dev, quilt (>=0.46-7)
+Build-Depends: debhelper (>= 7.0.50), autotools-dev
 Standards-Version: 3.8.4
 Homepage: http://cs.anu.edu.au/~bdm/nauty/
 Vcs-Git: git://git.debian.org/git/debian-science/packages/nauty.git
