--- a/gtools-h.in
+++ b/gtools-h.in
@@ -21,12 +21,14 @@ used, it is necessary to check they are correct.
 #define FTELL_DEC  @ftell_dec@         /* ftell() is declared in stdio.h */
 #define FDOPEN_DEC  @fdopen_dec@        /* fdopen() is declared in stdio.h */
 #define SORTPROG  "@sort_prog@"         /* name of sort program */
+#define SORT_NEWKEY @sort_newparams_ok@  /* if -k is supported */
 #define HAVE_PID_T @have_pid_t@    /* pid_t is defined */
 #define PUTENV_DEC @putenv_dec@   /* putenv() is declared in stdlib.h */
 #define SETENV_DEC @setenv_dec@   /* setenv() is declared in stdlib.h */
 #define HAVE_PUTENV @have_putenv@   /* putenv() exists */
 #define HAVE_SETENV @have_setenv@   /* setenv() exists */
 
+/* @edit_msg@ */
 /*==================================================================*/
 
 #ifndef MAXN 
@@ -156,7 +158,7 @@ extern "C" {
 extern void gtools_check(int,int,int,int);
 extern FILE *opengraphfile(char*,int*,boolean,long);
 extern void writeline(FILE*,char*);
-extern char *getline(FILE*);
+extern char *gtools_getline(FILE*);
 extern int graphsize(char*);
 extern void stringcounts(char*,int*,size_t*);
 extern void stringtograph(char*,graph*,int);
@@ -212,5 +214,7 @@ extern boolean is_pipe;
 #ifdef CPUDEFS
 CPUDEFS
 #endif
+
+/* @edit_msg@ */
 
 #endif /* _GTOOLS_H_  */
